# openGJK

./: .gitignore  AGENTS.md  CMakeDoxygenDefaults.cmake  CMakeLists.txt  INSTALL.md  README.md  openGJK.c  openGJK_cython.pyx  setup.py
example1_c/: CMakeLists.txt  main.c
examples/c/: CMakeLists.txt  main.c
examples/python_ctypes/: README.md  pyproject.toml
examples/python_ctypes/test/: test_min_distance.py
gpu/: CMakeLists.txt  README.md  gjk_kernel.cu  opengjk_gpu.cu
gpu/examples/gpu/: CMakeLists.txt  main.cu
gpu/examples/python/: README.md  example.py  openGJK_GPU.def  pyproject.toml  test_examples.py
gpu/examples/simple_collision/: CMakeLists.txt
gpu/include/: openGJK_GPU.h  opengjk_gpu.h
scalar/: CMakeLists.txt  openGJK.c
scalar/examples/c/: CMakeLists.txt  main.c
scalar/examples/cs/: main.cs
scalar/examples/cython/: openGJK_cython.c  openGJK_cython.pyx  test.py
scalar/examples/go/: example.go  go.work
scalar/examples/matlab/: main.m
scalar/examples/python/: build.sh  pyopenGJK.cpp  test.py
scalar/examples/python_ctypes/: example.py
scalar/examples/zig/: build.zig  build.zig.zon
scalar/include/openGJK/: openGJK.h
scalar/tests/: CMakeLists.txt  HFFtest_test.c  leak.c  subalg_1simplex_test.c  subalg_2simplex_test.c  subalg_3simplex_test.c  test_simple.c  valgrid_r1.0.0.supp
simd/: CMakeLists.txt  opengjk-inl.h  opengjk.cc  vcpkg.json
simd/build_double/highway/: DartConfiguration.tcl
simd/build_double/tests/: test_crossval  test_crossval[1]_include.cmake  test_crossval[1]_tests.cmake  test_gjk  test_gjk[1]_include.cmake  test_gjk[1]_tests.cmake  test_s1d  test_s1d[1]_include.cmake  test_s1d[1]_tests.cmake  test_s1d_crossval  test_s1d_crossval[1]_include.cmake  test_s1d_crossval[1]_tests.cmake  test_s2d  test_s2d[1]_include.cmake  test_s2d[1]_tests.cmake  test_s2d_crossval  test_s2d_crossval[1]_include.cmake  test_s2d_crossval[1]_tests.cmake  test_s3d  test_s3d[1]_include.cmake  test_s3d[1]_tests.cmake  test_s3d_crossval  test_s3d_crossval[1]_include.cmake  test_s3d_crossval[1]_tests.cmake
simd/build_double_minimal/highway/: DartConfiguration.tcl
simd/build_double_minimal/scalar/: opengjk_export.h
simd/build_double_minimal/tests/: test_crossval  test_crossval[1]_include.cmake  test_crossval[1]_tests.cmake  test_gjk  test_gjk[1]_include.cmake  test_gjk[1]_tests.cmake  test_s1d  test_s1d[1]_include.cmake  test_s1d[1]_tests.cmake  test_s1d_crossval  test_s1d_crossval[1]_include.cmake  test_s1d_crossval[1]_tests.cmake  test_s2d  test_s2d[1]_include.cmake  test_s2d[1]_tests.cmake  test_s2d_crossval  test_s2d_crossval[1]_include.cmake  test_s2d_crossval[1]_tests.cmake  test_s3d  test_s3d[1]_include.cmake  test_s3d[1]_tests.cmake  test_s3d_crossval  test_s3d_crossval[1]_include.cmake  test_s3d_crossval[1]_tests.cmake
simd/build_double_wide/highway/: DartConfiguration.tcl
simd/build_double_wide/tests/: test_crossval  test_crossval[1]_include.cmake  test_crossval[1]_tests.cmake  test_gjk  test_gjk[1]_include.cmake  test_gjk[1]_tests.cmake  test_s1d  test_s1d[1]_include.cmake  test_s1d[1]_tests.cmake  test_s1d_crossval  test_s1d_crossval[1]_include.cmake  test_s1d_crossval[1]_tests.cmake  test_s2d  test_s2d[1]_include.cmake  test_s2d[1]_tests.cmake  test_s2d_crossval  test_s2d_crossval[1]_include.cmake  test_s2d_crossval[1]_tests.cmake  test_s3d  test_s3d[1]_include.cmake  test_s3d[1]_tests.cmake  test_s3d_crossval  test_s3d_crossval[1]_include.cmake  test_s3d_crossval[1]_tests.cmake
simd/build_float/highway/: DartConfiguration.tcl
simd/build_float/tests/: test_crossval  test_crossval[1]_include.cmake  test_crossval[1]_tests.cmake  test_gjk  test_gjk[1]_include.cmake  test_gjk[1]_tests.cmake  test_s1d  test_s1d[1]_include.cmake  test_s1d[1]_tests.cmake  test_s1d_crossval  test_s1d_crossval[1]_include.cmake  test_s1d_crossval[1]_tests.cmake  test_s2d  test_s2d[1]_include.cmake  test_s2d[1]_tests.cmake  test_s2d_crossval  test_s2d_crossval[1]_include.cmake  test_s2d_crossval[1]_tests.cmake  test_s3d  test_s3d[1]_include.cmake  test_s3d[1]_tests.cmake  test_s3d_crossval  test_s3d_crossval[1]_include.cmake  test_s3d_crossval[1]_tests.cmake
simd/build_float_minimal/highway/: DartConfiguration.tcl
simd/build_float_minimal/tests/: test_crossval  test_crossval[1]_include.cmake  test_crossval[1]_tests.cmake  test_gjk  test_gjk[1]_include.cmake  test_gjk[1]_tests.cmake  test_s1d  test_s1d[1]_include.cmake  test_s1d[1]_tests.cmake  test_s1d_crossval  test_s1d_crossval[1]_include.cmake  test_s1d_crossval[1]_tests.cmake  test_s2d  test_s2d[1]_include.cmake  test_s2d[1]_tests.cmake  test_s2d_crossval  test_s2d_crossval[1]_include.cmake  test_s2d_crossval[1]_tests.cmake  test_s3d  test_s3d[1]_include.cmake  test_s3d[1]_tests.cmake  test_s3d_crossval  test_s3d_crossval[1]_include.cmake  test_s3d_crossval[1]_tests.cmake
simd/build_float_wide/highway/: DartConfiguration.tcl
simd/build_float_wide/tests/: test_crossval  test_crossval[1]_include.cmake  test_crossval[1]_tests.cmake  test_gjk  test_gjk[1]_include.cmake  test_gjk[1]_tests.cmake  test_s1d  test_s1d[1]_include.cmake  test_s1d[1]_tests.cmake  test_s1d_crossval  test_s1d_crossval[1]_include.cmake  test_s1d_crossval[1]_tests.cmake  test_s2d  test_s2d[1]_include.cmake  test_s2d[1]_tests.cmake  test_s2d_crossval  test_s2d_crossval[1]_include.cmake  test_s2d_crossval[1]_tests.cmake  test_s3d  test_s3d[1]_include.cmake  test_s3d[1]_tests.cmake  test_s3d_crossval  test_s3d_crossval[1]_include.cmake  test_s3d_crossval[1]_tests.cmake
simd/build_test/highway/: DartConfiguration.tcl
simd/build_test/tests/: test_crossval  test_crossval[1]_include.cmake  test_crossval[1]_tests.cmake  test_gjk  test_gjk[1]_include.cmake  test_gjk[1]_tests.cmake  test_s1d  test_s1d[1]_include.cmake  test_s2d  (+15 more)
simd/include/: opengjk_simd.hh  opengjk_simd_compile_config.h  opengjk_simd_config.h  opengjk_simd_init.h
simd/tests/: CMakeLists.txt  unittest_crossval.cc  unittest_gjk.cc  unittest_s1d.cc  unittest_s1d_crossval.cc  unittest_s2d.cc  unittest_s2d_crossval.cc  unittest_s3d.cc  unittest_s3d_crossval.cc
(+53 files in other folders)
